--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar/launchbar.component.html
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar/launchbar.component.html
@@ -18,7 +18,7 @@
   [style.display]="displayAppBar">
   <rs-com-launchbar-menu [menuItems]="allItems" [theme]="_theme" (itemClicked)="menuItemClicked($event)"  (refreshClicked)="getNewItems()"></rs-com-launchbar-menu>
   
-  <div class="applist row" 
+  <div class="applist" 
     [style.margin]="applistMargin"
     [style.background]="_theme.color.launchbarColor"
     [style.padding-left]="applistPadding"
