--- a/virtual-desktop/src/assets/css/desktop.css
+++ b/virtual-desktop/src/assets/css/desktop.css
@@ -1,5 +1,3 @@
-
-
 /*
   This program and the accompanying materials are
   made available under the terms of the Eclipse Public License v2.0 which accompanies
@@ -11,16 +9,16 @@
 */
 
 html {
- width: 100%;
- height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 body {
-  font-family: 'Roboto', sans-serif;
-  font-size: 14px;
-  line-height: 1.42857143;
-  width:100%;
-  height:100%;
+  font-family: 'Roboto', sans-serif !important;
+  font-size: 14px !important;
+  line-height: 1.42857143 !important;
+  width: 100%;
+  height: 100%;
 }
 
 .desktop {
@@ -34,14 +32,15 @@ body {
 
 /* Force the scroll bar to be show in webkit browser (Mac hides by default) */
 ::-webkit-scrollbar {
-    -webkit-appearance: none;
-    width: 8px;
-    height: 8px;
+  -webkit-appearance: none;
+  width: 8px;
+  height: 8px;
 }
+
 ::-webkit-scrollbar-thumb {
-    border-radius: 4px;
-    background-color: rgba(0,0,0,.35);
-    -webkit-box-shadow: 0 0 1px rgba(255,255,255,.5);
+  border-radius: 4px;
+  background-color: rgba(0, 0, 0, .35);
+  -webkit-box-shadow: 0 0 1px rgba(255, 255, 255, .5);
 }
 
 /*
@@ -53,4 +52,3 @@ body {
   
   Copyright Contributors to the Zowe Project.
 */
-
